# cmd-guard

./: Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
config/: allowlist.example.toml
presets/: apt-readonly.toml  bash-readonly.toml  brew-readonly.toml  cargo-build.toml  cargo-readonly.toml  cargo-test.toml  choco-readonly.toml  cmd-readonly.toml  dnf-readonly.toml  docker-readonly.toml  gh-readonly.toml  git-fetch.toml  git-readonly.toml  go-build.toml  go-readonly.toml  go-test.toml  kubectl-readonly.toml  node-readonly.toml  npm-build.toml  npm-readonly.toml  npm-test.toml  nu-readonly.toml  pacman-readonly.toml  pip-readonly.toml  pnpm-build.toml  pnpm-readonly.toml  pnpm-test.toml  podman-readonly.toml  ps-readonly.toml  rustup-readonly.toml  scoop-readonly.toml  winget-readonly.toml  yarn-build.toml  yarn-readonly.toml  yarn-test.toml
src/: allowlist.rs  main.rs  preset.rs  types.rs
src/parser/: bash.rs  mod.rs  nushell.rs  powershell.rs
