[package]
name = "cmd-guard"
version = "0.1.0"
edition = "2021"
authors = ["KudoLayton"]
repository = "https://github.com/KudoLayton/cmd-guard"
license = "Apache-2.0"

[dependencies]
tree-sitter = "0.25"
tree-sitter-bash = "0.23"
tree-sitter-powershell = "0.25"
tree-sitter-nu = { git = "https://github.com/nushell/tree-sitter-nu", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
dirs = "6"

[dev-dependencies]
